# RandyGPT

./: .gitignore  CANDLE_METAL_ISSUES.md  CHANGELOG.md  Cargo.toml  IMPROVEMENTS.md  PARALLELIZATION.md  PERFORMANCE.md  QUICKSTART.md  README.md  READY_TO_RUN.md  STATUS.md  USAGE.md  WHY_GIBBERISH.md  build.rs  download_data.sh  vocab.json  vocab_rust.json
colab/: RUNBOOK.md  randygpt_train.ipynb
configs/: large.rs  medium.rs  small.rs  tiny.rs
examples/: benchmark.rs  shakespeare.txt  simple_bigram.rs  test_metal.rs
runs/model_ds2_gutenberg_v3/: README.md  vocab_v3.json
scripts/: build_bpe_vocab.py  clean_gutenberg.py  clean_gutenberg_v2.py  clean_gutenberg_v3.py  download_gutenberg.sh  export_hf.py  fetch_gists.py  modeling_randygpt.py  publish_hf.sh  tokenizer_randygpt.py  train_torch.py  write_rgpt_checkpoint.py
spaces/: Dockerfile  README.md  app.py  requirements.txt  server.py
src/: checkpoint.rs  config.rs  forward.rs  main.rs  metal.rs  model.rs  ops.rs  optimizer.rs  rng.rs  serve.rs  tokenizer.rs  train.rs
