[package]
name = "randygpt"
version = "0.9.2"
edition = "2021"

[features]
# Model size presets — select with: cargo build --release --features model-s
# Default (no feature) = model-l: 256-dim, 8-head, 6-layer, ~4.82M params
model-s  = []   # 128-dim, 4-head, 4-layer, ~1.1M params,  ~500ms/iter
model-m  = []   # 192-dim, 6-head, 6-layer, ~2.7M params, ~1100ms/iter
model-xl = []   # 384-dim, 8-head, 8-layer, ~10.8M params, ~4000ms/iter

[dependencies]
candle-core = { version = "0.9.2", features = ["metal"] }
candle-nn = "0.9.2"
ctrlc = "3.4"
lazy_static = "1.5.0"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
