[package]
name = "randygpt"
version = "0.9.2"
edition = "2021"

[features]
# Model size presets — select with: cargo build --release --features model-s
# Default (no feature) = model-l: 256-dim, 8-head, 6-layer, ~4.82M params
model-xs = []   # 116-dim, 4-head, 3-layer, ~746K params
model-s  = []   # 128-dim, 4-head, 8-layer, ~1.6M params
model-m  = []   # 192-dim, 6-head, 6-layer, ~2.7M params, ~1100ms/iter
model-deep = [] # 192-dim, 6-head, 16-layer, ~7.5M params — depth experiment
model-xl = []   # 384-dim, 8-head, 8-layer, ~10.8M params, ~4000ms/iter

[dependencies]
candle-core = { version = "0.9.2", features = ["metal"] }
candle-nn = "0.9.2"
ctrlc = "3.4"
lazy_static = "1.5.0"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
